"Atualização do projeto Lisa's Café"

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav role="navigation">
             <div class="logo">
                 <a href="#" aria-label="Lisa's Café - Página Inicial">
-                    <img src="assets/images/logo.svg" alt="Lisa's Café Logo" class="logo-svg">
+                    <img src="assets/images/logo.svg" alt="Lisa's Café" class="logo-svg">
                 </a>
             </div>
             <ul>
